--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
 })(window,document,'script','dataLayer','GTM-MB5WJNM');</script>
 <!-- End Google Tag Manager -->
+	<meta name="p:domain_verify" content="da75b855a829a124fab359e559b1554e"/>
 	
 	<meta charset="UTF-8">
 		<title>Ciática Perfeita em 48 Horas</title>
