--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ﻿
 <!DOCTYPE html>
 <html lang="pt-PT">
-<head>
+<head><meta name="p:domain_verify" content="da75b855a829a124fab359e559b1554e"/>
 	<!-- Google Tag Manager -->
 <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
 new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
@@ -9,7 +9,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
 })(window,document,'script','dataLayer','GTM-MB5WJNM');</script>
 <!-- End Google Tag Manager -->
-	<meta name="p:domain_verify" content="da75b855a829a124fab359e559b1554e"/>
+
 	
 	<meta charset="UTF-8">
 		<title>Ciática Perfeita em 48 Horas</title>
