--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ﻿
 <!DOCTYPE html>
 <html lang="pt-PT">
-<head><meta name="p:domain_verify" content="8230a4bba8e08467043a6fe1628db96d"/>
+<head>
 	<!-- Google Tag Manager -->
 <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
 new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
