--- a/index.html
+++ b/index.html
@@ -2,6 +2,16 @@
 <!DOCTYPE html>
 <html lang="pt-PT">
 <head>
+	<!-- Global site tag (gtag.js) - Google Ads: 331362530 -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-331362530"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'AW-331362530');
+</script>
+
 	<!-- Google Tag Manager -->
 <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
 new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
