--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 			<div class="elementor-widget-wrap elementor-element-populated">
 								<div class="elementor-element elementor-element-d44ce11 elementor-widget elementor-widget-text-editor" data-id="d44ce11" data-element_type="widget" data-widget_type="text-editor.default">
 				<div class="elementor-widget-container">
-							<div class="cmt-fb-name"><strong><span style="color: #3b5998;">Luciana freitas</span></strong></div><div class="cmt-fb-comment"><span style="color: #333333;">Feliiiz demais!!! Obrigada Alberto </span> <img class="emoji" role="img" draggable="false" src="https://s.w.org/images/core/emoji/13.1.0/svg/1f60d.svg" alt="??" /><img class="emoji" role="img" draggable="false" src="https://s.w.org/images/core/emoji/13.1.0/svg/1f60d.svg" alt="??" /><img class="emoji" role="img" draggable="false" src="https://s.w.org/images/core/emoji/13.1.0/svg/1f60d.svg" alt="??" /></div><div class="cmt-fb-status"><img src="../segredosdareconquista.com/img/like.png" /> <span class="cmt-fb-numlike"><span style="color: #3b5998;">Curtir</span> </span>• <span class="cmt-fb-time">3 min</span></div>						</div>
+							<div class="cmt-fb-name"><strong><span style="color: #3b5998;">Luciana freitas</span></strong></div><div class="cmt-fb-comment"><span style="color: #333333;">Feliiiz demais!!! Obrigada Alberto </span> <img class="emoji" role="img" draggable="false" src="https://s.w.org/images/core/emoji/13.1.0/svg/1f60d.svg" alt="??" /><img class="emoji" role="img" draggable="false" src="https://s.w.org/images/core/emoji/13.1.0/svg/1f60d.svg" alt="??" /><img class="emoji" role="img" draggable="false" src="https://s.w.org/images/core/emoji/13.1.0/svg/1f60d.svg" alt="??" /></div><div class="cmt-fb-status"><img src="img/like.png" /> <span class="cmt-fb-numlike"><span style="color: #3b5998;">Curtir</span> </span>• <span class="cmt-fb-time">3 min</span></div>						</div>
 				</div>
 					</div>
 		</div>
@@ -207,7 +207,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 			<div class="elementor-widget-wrap elementor-element-populated">
 								<div class="elementor-element elementor-element-07ba384 elementor-widget elementor-widget-text-editor" data-id="07ba384" data-element_type="widget" data-widget_type="text-editor.default">
 				<div class="elementor-widget-container">
-							<div class="cmt-fb-name"><span style="color: #3b5998;"><b>Paulinha Dias</b></span></div><div class="cmt-fb-name"><span style="color: #333333;">Realmente funciona!!! Vai fazer dois meses que aplico o programa do Alberto e to conseguindo ver os resultados</span></div><div class="cmt-fb-status"><img src="../segredosdareconquista.com/img/like.png" /> <span class="cmt-fb-numlike"><span style="color: #3b5998;">Curtir</span> </span>• 10<span class="cmt-fb-time"> min</span></div>						</div>
+							<div class="cmt-fb-name"><span style="color: #3b5998;"><b>Paulinha Dias</b></span></div><div class="cmt-fb-name"><span style="color: #333333;">Realmente funciona!!! Vai fazer dois meses que aplico o programa do Alberto e to conseguindo ver os resultados</span></div><div class="cmt-fb-status"><img src="img/like.png" /> <span class="cmt-fb-numlike"><span style="color: #3b5998;">Curtir</span> </span>• 10<span class="cmt-fb-time"> min</span></div>						</div>
 				</div>
 					</div>
 		</div>
@@ -235,7 +235,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 			<div class="elementor-widget-wrap elementor-element-populated">
 								<div class="elementor-element elementor-element-8a49874 elementor-widget elementor-widget-text-editor" data-id="8a49874" data-element_type="widget" data-widget_type="text-editor.default">
 				<div class="elementor-widget-container">
-							<div><strong><span style="color: #3b5998;">Jussara avelas</span></strong></div><div><span style="color: #333333;">Eu tenho 47 anos e to de cara, faz uma semana que to aplicando tudo e já aliviou muito, muito mesmo, eu trabalho sentada o dia todo e me ajuda muito durante o dia</span><br /><img src="../segredosdareconquista.com/img/like.png" /> <span style="color: #3b5998;">Curtir</span> • 23 min </div>						</div>
+							<div><strong><span style="color: #3b5998;">Jussara avelas</span></strong></div><div><span style="color: #333333;">Eu tenho 47 anos e to de cara, faz uma semana que to aplicando tudo e já aliviou muito, muito mesmo, eu trabalho sentada o dia todo e me ajuda muito durante o dia</span><br /><img src="img/like.png" /> <span style="color: #3b5998;">Curtir</span> • 23 min </div>						</div>
 				</div>
 					</div>
 		</div>
@@ -263,7 +263,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 			<div class="elementor-widget-wrap elementor-element-populated">
 								<div class="elementor-element elementor-element-93fbf14 elementor-widget elementor-widget-text-editor" data-id="93fbf14" data-element_type="widget" data-widget_type="text-editor.default">
 				<div class="elementor-widget-container">
-							<div><span style="color: #3b5998;"><b>Gabriela Soares</b></span><br /><span style="color: #333333;">Gente eu estava desconfiada antes de fazer. E muito bom mesmo, pode fazer pessoal, aqui em casa eu já notei que posso fazer minhas coisas novamente que minha coluna não incomoda mais</span></div><div><img src="../segredosdareconquista.com/img/like.png" /> <span style="color: #3b5998;">Curtir</span> • 38 min</div>						</div>
+							<div><span style="color: #3b5998;"><b>Gabriela Soares</b></span><br /><span style="color: #333333;">Gente eu estava desconfiada antes de fazer. E muito bom mesmo, pode fazer pessoal, aqui em casa eu já notei que posso fazer minhas coisas novamente que minha coluna não incomoda mais</span></div><div><img src="img/like.png" /> <span style="color: #3b5998;">Curtir</span> • 38 min</div>						</div>
 				</div>
 					</div>
 		</div>
@@ -291,7 +291,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 			<div class="elementor-widget-wrap elementor-element-populated">
 								<div class="elementor-element elementor-element-9d31970 elementor-widget elementor-widget-text-editor" data-id="9d31970" data-element_type="widget" data-widget_type="text-editor.default">
 				<div class="elementor-widget-container">
-							<div><span style="color: #3b5998;"><b>Maria paula</b></span></div><div><span style="color: #333333;">Na quarentena eu fiz umas coisa em casa, mas esse funciona mesmo?</span></div><div><img src="../segredosdareconquista.com/img/like.png" /> <span style="color: #3b5998;">Curtir </span>• 1h</div>						</div>
+							<div><span style="color: #3b5998;"><b>Maria paula</b></span></div><div><span style="color: #333333;">Na quarentena eu fiz umas coisa em casa, mas esse funciona mesmo?</span></div><div><img src="img/like.png" /> <span style="color: #3b5998;">Curtir </span>• 1h</div>						</div>
 				</div>
 					</div>
 		</div>
@@ -311,7 +311,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 			<div class="elementor-widget-wrap elementor-element-populated">
 								<div class="elementor-element elementor-element-f91105f elementor-widget elementor-widget-text-editor" data-id="f91105f" data-element_type="widget" data-widget_type="text-editor.default">
 				<div class="elementor-widget-container">
-							<div><span style="color: #3b5998;"><b>Lurdes espedião</b></span></div><div><span style="color: #333333;">Maria eu faço tudo em casa, nos primeiro dia eu já senti um alivio muito grande nas minhas costas</span></div><div><img src="../segredosdareconquista.com/img/like.png" /> <span style="color: #3b5998;">Curtir</span> •18 min</div>						</div>
+							<div><span style="color: #3b5998;"><b>Lurdes espedião</b></span></div><div><span style="color: #333333;">Maria eu faço tudo em casa, nos primeiro dia eu já senti um alivio muito grande nas minhas costas</span></div><div><img src="img/like.png" /> <span style="color: #3b5998;">Curtir</span> •18 min</div>						</div>
 				</div>
 					</div>
 		</div>
@@ -331,7 +331,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 			<div class="elementor-widget-wrap elementor-element-populated">
 								<div class="elementor-element elementor-element-1be69d2 elementor-widget elementor-widget-text-editor" data-id="1be69d2" data-element_type="widget" data-widget_type="text-editor.default">
 				<div class="elementor-widget-container">
-							<div><strong><span style="color: #3b5998;">Maria Paula</span></strong></div><div><span style="color: #333333;">Comprei e gostei bastante</span><br /><img src="../segredosdareconquista.com/img/like.png" /> <span style="color: #3b5998;">Curtir</span> •10min</div>						</div>
+							<div><strong><span style="color: #3b5998;">Maria Paula</span></strong></div><div><span style="color: #333333;">Comprei e gostei bastante</span><br /><img src="img/like.png" /> <span style="color: #3b5998;">Curtir</span> •10min</div>						</div>
 				</div>
 					</div>
 		</div>
@@ -351,7 +351,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 			<div class="elementor-widget-wrap elementor-element-populated">
 								<div class="elementor-element elementor-element-17da9e2 elementor-widget elementor-widget-text-editor" data-id="17da9e2" data-element_type="widget" data-widget_type="text-editor.default">
 				<div class="elementor-widget-container">
-							<div><strong><span style="color: #3b5998;">Maria Paula</span></strong></div><div><span style="color: #333333;">Obrigada meninas, vou comprar agora mesmo </span><br /><img src="../segredosdareconquista.com/img/like.png" /> <span style="color: #3b5998;">Curtir</span> • 8 min</div>						</div>
+							<div><strong><span style="color: #3b5998;">Maria Paula</span></strong></div><div><span style="color: #333333;">Obrigada meninas, vou comprar agora mesmo </span><br /><img src="img/like.png" /> <span style="color: #3b5998;">Curtir</span> • 8 min</div>						</div>
 				</div>
 					</div>
 		</div>
@@ -379,7 +379,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 			<div class="elementor-widget-wrap elementor-element-populated">
 								<div class="elementor-element elementor-element-9a4bc6c elementor-widget elementor-widget-text-editor" data-id="9a4bc6c" data-element_type="widget" data-widget_type="text-editor.default">
 				<div class="elementor-widget-container">
-							<div><span style="color: #3b5998;"><b>Fabio Duarte</b></span><br /><span style="color: #333333;">Passo muitas horas do dia em meu escritório e me doia demais as costas, depois desse programa, alivio minhas dores usando a própria cadeira do escritório.</span></div><div><img src="../segredosdareconquista.com/img/like.png" /> <span style="color: #3b5998;">Curtir</span> • 2h </div>						</div>
+							<div><span style="color: #3b5998;"><b>Fabio Duarte</b></span><br /><span style="color: #333333;">Passo muitas horas do dia em meu escritório e me doia demais as costas, depois desse programa, alivio minhas dores usando a própria cadeira do escritório.</span></div><div><img src="img/like.png" /> <span style="color: #3b5998;">Curtir</span> • 2h </div>						</div>
 				</div>
 					</div>
 		</div>
@@ -407,7 +407,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 			<div class="elementor-widget-wrap elementor-element-populated">
 								<div class="elementor-element elementor-element-5ec583d elementor-widget elementor-widget-text-editor" data-id="5ec583d" data-element_type="widget" data-widget_type="text-editor.default">
 				<div class="elementor-widget-container">
-							<div><strong><span style="color: #3b5998;">João Miguel</span></strong></div><div><span style="color: #333333;">Eu trabalhava em obra e carregava muito peso, eu pagaria muito mais se eu soubesse que teria esses resultados</span><br /><img src="../segredosdareconquista.com/img/like.png" /> <span style="color: #3b5998;">Curtir</span> • 3h</div>						</div>
+							<div><strong><span style="color: #3b5998;">João Miguel</span></strong></div><div><span style="color: #333333;">Eu trabalhava em obra e carregava muito peso, eu pagaria muito mais se eu soubesse que teria esses resultados</span><br /><img src="img/like.png" /> <span style="color: #3b5998;">Curtir</span> • 3h</div>						</div>
 				</div>
 					</div>
 		</div>
@@ -427,7 +427,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 			<div class="elementor-widget-wrap elementor-element-populated">
 								<div class="elementor-element elementor-element-73f5fe0 elementor-widget elementor-widget-text-editor" data-id="73f5fe0" data-element_type="widget" data-widget_type="text-editor.default">
 				<div class="elementor-widget-container">
-							<div><span style="color: #3b5998;"><b>Antonio Falcão</b></span><br /><span style="color: #333333;">Digo o mesmo joão, trabalhei por anos como zelador e o medico sempre me recomendava remedio e não adiantava de nada </span></div><div><img src="../segredosdareconquista.com/img/like.png" /> <span style="color: #3b5998;">Curtir</span> • 57 min</div>						</div>
+							<div><span style="color: #3b5998;"><b>Antonio Falcão</b></span><br /><span style="color: #333333;">Digo o mesmo joão, trabalhei por anos como zelador e o medico sempre me recomendava remedio e não adiantava de nada </span></div><div><img src="img/like.png" /> <span style="color: #3b5998;">Curtir</span> • 57 min</div>						</div>
 				</div>
 					</div>
 		</div>
