--- a/index.html
+++ b/index.html
@@ -457,7 +457,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 				<div class="elementor-widget-container">
 							<div><span style="color: #3b5998;"><b>Pedro Valadares</b></span></div>
 <div><span style="color: #333333;">Olha @marciosmesquita o que eu tinha te falado semana passada</span></div>
-<div><img src="like.png">&nbsp;<span style="color: #3b5998;">Curtir</span>&nbsp;• 4h</div>						</div>
+<div><img src="img/like.png">&nbsp;<span style="color: #3b5998;">Curtir</span>&nbsp;• 4h</div>						</div>
 				</div>
 					</div>
 		</div>
