--- a/index.html
+++ b/index.html
@@ -127,27 +127,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <div class="elementor-element elementor-element-50400e2 elementor-widget elementor-widget-html" data-id="50400e2" data-element_type="widget" data-widget_type="html.default"> 
 <div class="elementor-widget-container"> 
 <div style="position: relative; height: 0; padding-bottom: 56.2%; padding-top: 0;"> 
-<div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/666126605?h=36c1f5bed9&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;" </iframe></div>
-<div style="position: absolute;top: 0;width: 100%;height: 70px;background-color: transparent;z-index: 101;left: 0;"></div> 
-<div style="position: absolute;bottom: 0;width: 100%;height: 50px;background-color: transparent;z-index: 101;left: 0;"></div>
-
+<script type="text/javascript" id="scr_61e95ee51e3b91000948a246">var s=document.createElement("script");s.src="https://cdn.converteai.net/7e28a9d0-b6a9-40f5-9e8a-14e27615617f/players/61e95ee51e3b91000948a246/player.js",s.async=!0,document.head.appendChild(s);</script>
 	</div>
-	</div>
-	</div>
-								<div class="elementor-element elementor-element-8293134 elementor-align-center elementor-invisible elementor-widget elementor-widget-button" data-id="8293134" data-element_type="widget" data-settings="{&quot;_animation&quot;:&quot;fadeIn&quot;,&quot;_animation_delay&quot;:1590000}" data-widget_type="button.default">
-				<div class="elementor-widget-container">
-					<div class="elementor-button-wrapper">
-			<a href="https://pay.kiwify.com.br/3k73QcS?afid=tJt5rK8P" class="elementor-button-link elementor-button elementor-size-lg" role="button">
-						<span class="elementor-button-content-wrapper">
-						<span class="elementor-button-text">"QUERO VIVER UMA VIDA SEM DOR"</span>
-		</span>
-					</a>
-		</div>
-				</div>
-				</div>
-					</div>
-		</div>
-							</div>
+							
 		</section>
 				<section class="elementor-section elementor-top-section elementor-element elementor-element-89784d3 elementor-section-boxed elementor-section-height-default elementor-section-height-default" data-id="89784d3" data-element_type="section" data-settings="{&quot;background_background&quot;:&quot;classic&quot;}">
 						<div class="elementor-container elementor-column-gap-default">
