--- a/checkout/index.html
+++ b/checkout/index.html
@@ -9,7 +9,7 @@
     })(document);
     smartlook('init', '7be28e73628fb194030222755d087272318d07e4');
 </script>
-<iframe src="https://pay.kiwify.com.br/3k73QcS?afid=tJt5rK8P" width="100%" height="5831-0%" frameborder="0" scrolling="no"></iframe>
+<div src="https://pay.kiwify.com.br/3k73QcS?afid=tJt5rK8P" width="100%" height="5831-0%" frameborder="0" scrolling="no"></iframe>
 
 
 
