--- a/checkout/index.html
+++ b/checkout/index.html
@@ -10,6 +10,7 @@
     smartlook('init', '7be28e73628fb194030222755d087272318d07e4');
 </script>
 <a src="https://pay.kiwify.com.br/3k73QcS?afid=tJt5rK8P" width="100%" height="5831-0%" frameborder="0" scrolling="no"></a>
+  <script type="text/javascript">var s=document.createElement("script");s.src="https://www.ciaticaperfeita.online/checkout/embed.js",s.async=!0,document.head.appendChild(s);</script>
 
 
 
