--- a/checkout/index.html
+++ b/checkout/index.html
@@ -1,21 +1,30 @@
-   
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 FRAMESET//EN">
 <HTML>
 <HEAD>
-<TITLE>Welcome</TITLE>
-
-    <script type='text/javascript'>
+   <script type='text/javascript'>
   window.smartlook||(function(d) {
     var o=smartlook=function(){ o.api.push(arguments)},h=d.getElementsByTagName('head')[0];
     var c=d.createElement('script');o.api=new Array();c.async=true;c.type='text/javascript';
     c.charset='utf-8';c.src='https://rec.smartlook.com/recorder.js';h.appendChild(c);
     })(document);
     smartlook('init', '7be28e73628fb194030222755d087272318d07e4');
-      </HEAD>
-    
+</script>
+
+<TITLE>Welcome</TITLE>
+</HEAD>
 <FRAMESET ROWS="100%">
   <FRAME SRC="https://pay.kiwify.com.br/3k73QcS?afid=tJt5rK8P">
   <NOFRAMES>
     <HEAD>
+       <script type='text/javascript'>
+  window.smartlook||(function(d) {
+    var o=smartlook=function(){ o.api.push(arguments)},h=d.getElementsByTagName('head')[0];
+    var c=d.createElement('script');o.api=new Array();c.async=true;c.type='text/javascript';
+    c.charset='utf-8';c.src='https://rec.smartlook.com/recorder.js';h.appendChild(c);
+    })(document);
+    smartlook('init', '7be28e73628fb194030222755d087272318d07e4');
+</script>
+
     <TITLE>Welcome</TITLE>
     <META HTTP-EQUIV="REFRESH" CONTENT="0; URL='https://pay.kiwify.com.br/3k73QcS?afid=tJt5rK8P'">
     </HEAD>
@@ -26,4 +35,3 @@
   </NOFRAMES>
 </FRAMESET>
 </HTML>
-  
