--- a/index.html
+++ b/index.html
@@ -2,15 +2,7 @@
 <html lang="pt-PT">
 
 <head>
-	<!-- Global site tag (gtag.js) - Google Ads: 331362530 -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=AW-331362530"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
 
-  gtag('config', 'AW-331362530');
-</script>
 
 	<!-- Google Tag Manager -->
 <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
@@ -126,7 +118,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <div class="elementor-element elementor-element-50400e2 elementor-widget elementor-widget-html" data-id="50400e2" data-element_type="widget" data-widget_type="html.default"> 
 <div class="elementor-widget-container"> 
 <div style="position: relative; height: 0; padding-bottom: 56.2%; padding-top: 0;"> 
-<script type="text/javascript" id="scr_61e95ee51e3b91000948a246">var s=document.createElement("script");s.src="https://cdn.converteai.net/7e28a9d0-b6a9-40f5-9e8a-14e27615617f/players/61e95ee51e3b91000948a246/player.js",s.async=!0,document.head.appendChild(s);</script>
+<div style="padding:56.25% 0 0 0;position:relative;"><iframe frameborder="0" allowfullscreen src="https://cdn.converteai.net/1863d47d-8bb0-4e96-8213-76f5def1ec9c/players/620eb89223a4860008cf51b7/embed.html" id="ifr_620eb89223a4860008cf51b7" style="position:absolute;top:0;left:0;width:100%;height:100%;" referrerpolicy="origin"></iframe></div>
 	</div>
 							
 		</section>
