--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="pt-PT">
 
 <head>
+	<!-- Global site tag (gtag.js) - Google Ads: 10851147933 --> <script async src="https://www.googletagmanager.com/gtag/js?id=AW-10851147933"></script> <script>   window.dataLayer = window.dataLayer || [];   function gtag(){dataLayer.push(arguments);}   gtag('js', new Date());    gtag('config', 'AW-10851147933'); </script> 
 
 
 	<!-- Google Tag Manager -->
