--- a/index.html
+++ b/index.html
@@ -2,8 +2,24 @@
 <html lang="pt-PT">
 
 <head>
-	<!-- Global site tag (gtag.js) - Google Ads: 10851147933 --> <script async src="https://www.googletagmanager.com/gtag/js?id=AW-10851147933"></script> <script>   window.dataLayer = window.dataLayer || [];   function gtag(){dataLayer.push(arguments);}   gtag('js', new Date());    gtag('config', 'AW-10851147933'); </script> 
+	<!-- Global site tag (gtag.js) - Google Ads: 10831694709 -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-10831694709"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'AW-10831694709');
+</script>
+
+	<!-- Event snippet for Visualização de página conversion page -->
+<script>
+  gtag('event', 'conversion', {
+      'send_to': 'AW-10831694709/VskoCOX1uqgDEPWW-qwo',
+      'value': 0.0,
+      'currency': 'BRL'
+  });
+</script>
 
 	<!-- Google Tag Manager -->
 <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
